# YSZD_RobotPlattform

./: APRILTAG_GUIDE.md  CMakeLists.txt  CONTROL_CONFLICT_FIX.md  MECANUM_CONTROL_UPDATE.md  NAV2_WAYPOINT_SYSTEM.md  README.md  WAYPOINT_FILE_SWITCH_FIX.md  WAYPOINT_INTEGRATION_SUMMARY.md  WAYPOINT_REPLAY_GUIDE.md  WAYPOINT_USAGE_GUIDE.md  WAYPOINT_WEB_INTEGRATION.md  WEBSOCKET_BRIDGE_SOLUTION.md  camera_troubleshoot.sh  check_camera_topics.sh  fix_ros2_env.sh  frames_2025-10-13_15.54.30.gv  install_dependencies.sh  package.xml  set_ros_domain_default.sh  simple_topic_check.sh  start_apriltag_robot.sh  start_nav2_final.sh  start_nav2_fixed.sh  start_nav2_obstacles.sh  start_nav2_simple.sh  start_nav2_working.sh  stop_apriltag_robot.sh  test_angle_threshold.py  test_apriltag_output.py  test_control_conflict.py  test_joystick_drift.py  test_map_display.py  test_map_model.sh  test_opencv_fix.py  test_waypoint_follower.py  test_waypoint_switch.py  test_zero_command.py
config/: nav2_params.yaml
docs/: robot_state_machine_manual.md
install/: local_setup.sh  setup.sh
launch/: apriltag_robot.launch.py  mecanum_robot.launch.py  mecanum_robot_clean.launch.py  robot_state_machine.launch.py  simple_nav2.launch.py
log/: latest_build
mecanum_robot/: __init__.py
rviz/: map_display.rviz  mecanum_robot_path.rviz  nav2_with_obstacles.rviz  simple_path.rviz
scripts/: apriltag_detector_enhanced.py  apriltag_detector_fixed.py  apriltag_detector_opencv4.py  camera_diagnosis.py  camera_node_fixed.py  complete_waypoint_test.sh  generate_apriltag.py  image_viewer.py  robot_node.py  (+19 more)
(+72 files in other folders)
